fixed overflowing text on anime cards in animes/

--- a/src/app/anime-list/anime-list.component.css
+++ b/src/app/anime-list/anime-list.component.css
@@ -14,6 +14,18 @@ a {
     padding: 2px;
     border-radius: 5px;
 }
+
+.card-text {
+    display: block;
+    height: 100%;
+    overflow: hidden;
+    white-space: initial;
+    /*word-wrap: break-word;
+    text-overflow: ellipsis;*/
+    overflow-wrap: break-word;
+    text-overflow: ellipsis;
+}
+
 .container {
     min-width: 80vw;
 }
